// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeriesAbout snapshots Renders properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c4 {
  position: relative;
  width: 100%;
}

.c4 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c4 a:hover {
  color: #999999;
  opacity: 1;
}

.c4 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c4 p,
.c4 ul,
.c4 ol,
.c4 .paragraph,
.c4 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c4 p:first-child,
.c4 .paragraph:first-child,
.c4 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c4 p:last-child,
.c4 .paragraph:last-child,
.c4 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c4 ul,
.c4 ol {
  padding-left: 1em;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c4 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c4 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c4 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c4 h2 a {
  background-size: 1.25px 1px;
}

.c4 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c4 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c4 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c4 h3 a {
  background-size: 1.25px 1px;
}

.c4 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c4 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c4 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c4 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c4 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c3 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media (max-width:600px) {
  .c4 p,
  .c4 ul,
  .c4 ol,
  .c4 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c4 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c4 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c4 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c4 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c4 .content-start {
    font-size: 55px;
  }
}

<div
  className="c0"
  color="black"
  width="100%"
>
  <div
    className="c1"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="c2"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="c3"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c4"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editDescription 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c4 {
  position: relative;
  width: 100%;
}

.c4 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c4 a:hover {
  color: #999999;
  opacity: 1;
}

.c4 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c4 p,
.c4 ul,
.c4 ol,
.c4 .paragraph,
.c4 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c4 p:first-child,
.c4 .paragraph:first-child,
.c4 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c4 p:last-child,
.c4 .paragraph:last-child,
.c4 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c4 ul,
.c4 ol {
  padding-left: 1em;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c4 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c4 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c4 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c4 h2 a {
  background-size: 1.25px 1px;
}

.c4 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c4 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c4 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c4 h3 a {
  background-size: 1.25px 1px;
}

.c4 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c4 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c4 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c4 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c4 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c3 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media (max-width:600px) {
  .c4 p,
  .c4 ul,
  .c4 ol,
  .c4 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c4 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c4 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c4 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c4 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c4 .content-start {
    font-size: 55px;
  }
}

<div
  className="c0"
  color="black"
  width="100%"
>
  <div
    className="c1"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="c2"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="c3"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="article__text-section c4"
      color="black"
    >
      <div>
        Child 
        description
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editSubTitle 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c4 {
  position: relative;
  width: 100%;
}

.c4 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c4 a:hover {
  color: #999999;
  opacity: 1;
}

.c4 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c4 p,
.c4 ul,
.c4 ol,
.c4 .paragraph,
.c4 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c4 p:first-child,
.c4 .paragraph:first-child,
.c4 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c4 p:last-child,
.c4 .paragraph:last-child,
.c4 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c4 ul,
.c4 ol {
  padding-left: 1em;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c4 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c4 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c4 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c4 h2 a {
  background-size: 1.25px 1px;
}

.c4 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c4 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c4 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c4 h3 a {
  background-size: 1.25px 1px;
}

.c4 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c4 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c4 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c4 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c4 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c3 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c3 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media (max-width:600px) {
  .c4 p,
  .c4 ul,
  .c4 ol,
  .c4 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c4 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c4 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c4 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c4 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c4 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c4 .content-start {
    font-size: 55px;
  }
}

<div
  className="c0"
  color="black"
  width="100%"
>
  <div
    className="c1"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="c2"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      <div>
        Child 
        sub_title
      </div>
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="c3"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c4"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with sponsor 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 1200px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 28px;
  line-height: 36px;
  margin-bottom: 20px;
}

.c3 {
  margin-bottom: 4px;
}

.c9 {
  margin-top: 60px;
}

.c4 {
  display: block;
}

.c6 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c5 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c8 {
  position: relative;
  width: 100%;
}

.c8 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c8 a:hover {
  color: #999999;
  opacity: 1;
}

.c8 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c8 p,
.c8 ul,
.c8 ol,
.c8 .paragraph,
.c8 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c8 p:first-child,
.c8 .paragraph:first-child,
.c8 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c8 p:last-child,
.c8 .paragraph:last-child,
.c8 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c8 ul,
.c8 ol {
  padding-left: 1em;
}

.c8 ul {
  list-style: disc;
}

.c8 ol {
  list-style: decimal;
}

.c8 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c8 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c8 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c8 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c8 h2 a {
  background-size: 1.25px 1px;
}

.c8 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c8 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c8 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c8 h3 a {
  background-size: 1.25px 1px;
}

.c8 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c8 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c8 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c8 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c8 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media screen and (min-width:40em) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c7 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c7 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64em) {
  .c7 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media screen and (min-width:52em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media screen and (min-width:64em) {
  .c2 {
    margin-bottom: 0px;
  }
}

@media (max-width:720px) {
  .c5 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c8 p,
  .c8 ul,
  .c8 ol,
  .c8 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c8 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c8 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c8 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c8 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c8 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c8 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c8 .content-start {
    font-size: 55px;
  }
}

<div
  className="c0"
  color="black"
  width="100%"
>
  <div
    className="c1"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="c2"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    >
      <div
        className="c3"
      >
        <div
          className="PartnerBlock c4"
        >
          <div
            className="c5"
          >
            Presented in Partnership with
          </div>
          <div
            className="c6"
          >
            <a
              href="http://artsy.net"
              onClick={[Function]}
              target="_blank"
            >
              <img
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c7"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c8"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    >
      <div
        className="c9"
      >
        <div
          className="PartnerBlock c4"
        >
          <div
            className="c5"
          >
            Presented in Partnership with
          </div>
          <div
            className="c6"
          >
            <a
              href="http://artsy.net"
              onClick={[Function]}
              target="_blank"
            >
              <img
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
